Solve dark mode flicker problem

--- a/styles/scss/components/MobileNavigation.scss
+++ b/styles/scss/components/MobileNavigation.scss
@@ -52,7 +52,7 @@
 .m_navigation__links {
   position: fixed;
   list-style: none;
-  background-color: $header-scroll;
+  background-color: $theme;
   margin: 0;
   top: 4rem;
   left: 0;
